--- a/style.css
+++ b/style.css
@@ -7,7 +7,32 @@
 body {
   background-image: url(./assets/fechodomorro.jpg);
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   min-height: 100vh;
   font-family: "Slabo", Verdana;
   margin: 0;
+}
+
+h1 {
+  font-size: 6rem;
+  margin-top: -30rem;
+}
+.counting-container {
+  display: flex;
+}
+
+time-text {
+  font-size: 6rem;
+  line-height: 1;
+  margin: 0 2rem;
+}
+
+.count-el {
+  text-align: center;
+}
+.count-el span {
+  font-size: 2rem;
 }
