--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url(./assets/fechodomorro.jpg);
+  background-image: url(./assets/night.jpg);
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -24,10 +24,11 @@ h1 {
   display: flex;
 }
 
-time-text {
+.time-text {
   font-size: 6rem;
   line-height: 1;
   margin: 0 2rem;
+  padding: 30px;
 }
 
 .count-el {
